# upagent

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml  uptimesense-digitalocean.yaml
authentication/: context_processors.py  email_utils.py  forms.py  middleware.py  models.py  two_factor_utils.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html  password_reset.html  password_reset_complete.html  password_reset_email.html  password_reset_email.txt  ratelimit.html  register.html  two_factor_settings.html  two_factor_verify.html
flow_monitors/: apps.py  forms.py  models.py  urls.py  views.py
flow_monitors/migrations/: 0001_initial.py
flow_monitors/services/: runner.py
monitors/: apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
monitors/management/commands/: orphans.py  (+2 more)
monitors/migrations/: 0001_initial.py  0002_alter_monitor_interval_seconds.py  0003_monitor_owner.py  0004_monitor_request_method.py  0005_alter_monitor_request_method.py
monitors/services/: checks.py
monitors/templatetags/: monitor_tags.py
setup_scripts/: start_workers.sh
static/src/: input.css  output.css
staticfiles/compressed/: manifest.json
staticfiles/src/: output.css
status_page/: urls.py  views.py
support/: admin.py  forms.py  models.py  urls.py  views.py
support/migrations/: 0001_initial.py  0002_alter_supportrequest_name.py
templates/: base.html
upagent_monitor/: asgi.py  settings.py  urls.py  wsgi.py
(+26 files in other folders)
