[project]
name = "upagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduard Maghakyan",email = "edi.maghakyan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "icmplib (>=3.0.4,<4.0.0)",
    "django-crispy-forms (>=2.3,<3.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)",
    "postmarker (>=1.0,<2.0)",
    "django-rq (>=3.0.0,<4.0.0)",
    "rq-scheduler (>=0.14.0,<0.15.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
